syntax = "proto3";
package content_store;

service ContentStore {
  rpc ResolveAlias(ResolveAliasRequest) returns (ResolveAliasResponse) {};
  rpc RegisterAlias(RegisterAliasRequest) returns (RegisterAliasResponse) {};
  rpc ReadContent(ReadContentRequest) returns (ReadContentResponse) {};
  rpc GetContentWriter(GetContentWriterRequest) returns (GetContentWriterResponse) {};
  rpc WriteContent(WriteContentRequest) returns (WriteContentResponse) {};
}

message ResolveAliasRequest {
  string data_space = 1;
  bytes key = 2;
}

message ResolveAliasResponse {
  string id = 1;
}

message RegisterAliasRequest {
  string data_space = 1;
  bytes key = 2;
  string id = 3;
}

message RegisterAliasResponse {
  bool newly_registered = 1;
  string id = 2;
}

message ReadContentRequest {
  string data_space = 1;
  string id = 2;
}

message ReadContentResponse {
  oneof content {
    UrlContent url = 1;
    DataContent data = 2;
  }
}

message UrlContent {
  string url = 1;
  bytes origin = 2;
}

message DataContent {
  bytes data = 1;
  bytes origin = 2;
}

message GetContentWriterRequest {
  string data_space = 1;
  string id = 2;
}

message GetContentWriterResponse {
  oneof content_writer {
    string url = 1;
  }
}

message WriteContentRequest {
  string data_space = 1;
  bytes data = 2;
}

message WriteContentResponse {
  string id = 1;
}