syntax = "proto3";
package scene_explorer;

//////////////////////////////////////////////////////////////////////////////////////

service SceneExplorer {
  rpc CreateEntity(CreateEntityRequest) returns (CreateEntityResponse);
  rpc DeleteEntities(DeleteEntitiesRequest) returns (DeleteEntitiesResponse);

  rpc GetEntityHierarchy(GetEntityHierarchyRequest)
      returns (GetEntityHierarchyResponse);
}

message GetEntityHierarchyRequest {
  string filter = 1;
  string top_resource_id = 2;
}

message EntityInfo {
  string path = 1;
  string entity_name = 2;
  string type = 3;
  string resource_id = 4;
  repeated EntityInfo children = 5;
}
message GetEntityHierarchyResponse { EntityInfo entity_info = 1; }

message CreateEntityRequest {
  optional string entity_name = 1;
  optional string template_id = 2;
  optional string scene_resource_id = 3;
  optional string parent_resource_id = 4;
  repeated InitPropertyValue init_values = 5;
}

message InitPropertyValue {
  string property_path = 1;
  string json_value = 2;
}

message CreateEntityResponse { string new_id = 1; }

message DeleteEntitiesRequest { repeated string resource_ids = 1; }
message DeleteEntitiesResponse {}

//////////////////////////////////////////////////////////////////////////////////////
